# minecraft_bevy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: UV_map_example.xcf
src/: add_break_blocks.rs  block_reg.rs  chunk.rs  chunk_queue.rs  debug_3d.rs  inventory.rs  main.rs  player.rs  sky.rs  utils.rs
src/chunk/: chunk_queue.rs  gen.rs  mod.rs  systems.rs
src/player/: mod.rs  movement.rs
