[package]
name = "minecraft_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_atmosphere = "0.7.0"
bevy_meshem = { git = "https://github.com/Adamkob12/bevy_meshem.git" }
smooth-bevy-cameras = {git = "https://github.com/bonsairobo/smooth-bevy-cameras.git"}
futures-lite = "1.13.0"
noise = "0.8.2"
